# blind-savers

./: .gitignore  README.md  package.json  pnpm-lock.yaml  turbo.json
apps/blindSavers/: README.md  package.json
apps/blindSavers/android/app/: build.gradle
apps/blindSavers/android/app/src/main/res/values/: strings.xml
apps/blindSavers/ios/: Podfile
apps/blindSavers/ios/blindSavers.xcodeproj/: project.pbxproj
apps/blindSavers/ios/blindSavers.xcodeproj/xcshareddata/xcschemes/: blindSavers.xcscheme
apps/blindSavers/ios/blindSavers.xcworkspace/: contents.xcworkspacedata
apps/vision/: pyproject.toml  requirements.txt
apps/vision/configs/: config.yaml
apps/vision/src/: test_camera.py  train.py
apps/vision/src/data/: dataset.py
apps/vision/src/inference/: flask_사용시.py  inference.py
apps/vision/src/models/: model.py
apps/vision/src/utils/: logger.py  model_utils.py  preprocessing.py
apps/vision/temp/test/: train.py
apps/vision/temp/test/data/: dataset.py
apps/vision/temp/test/inference/: detector.py
apps/vision/temp/test/models/: model.py  pretrained.py
apps/vision/temp/test/utils/: classifier.py  evaluation.py  preprocessing.py
blindSavers/: README.md  app.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
blindSavers/android/: settings.gradle
blindSavers/android/app/src/main/java/com/blindsavers/: MainActivity.kt
blindSavers/ios/blindSavers/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
blindSavers/ios/blindSavers.xcodeproj/: project.pbxproj
(+1 files in other folders)
